--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
         <a class="round-link" href="./round3/round3.html">Round 3</a>
         <a class="round-link" href="./round4/round4.html">Round 4</a>
         <a class="round-link" href="./round5/round5.html">Round 5</a>
+        <a class="round-link" href="./round6/round6.html">Round 6</a>
+        <a class="round-link" href="./final/index2.html">Final Round</a>
+
     </div>
 </body>
 </html>
