--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container">
         <h1>Welcome to the Treasure Hunt Game!</h1>
         <p>Are you ready to embark on an exciting adventure?</p>
-        <a class="round-link" href="./round1/tvm.html">Round 1</a>
+        <a class="round-link" href="./round1/round1.html">Round 1</a>
         <a class="round-link" href="./round2/round2.html">Round 2</a>
         <a class="round-link" href="./round3/round3.html">Round 3</a>
         <a class="round-link" href="./round4/round4.html">Round 4</a>
